--- a/apps/web_server/priv/static/css/index.css
+++ b/apps/web_server/priv/static/css/index.css
@@ -1,3 +1,7 @@
+.aex-header {
+    margin: 48px 20px 48px 20px;
+}
+
 .aex-resource>div {
     display: inline-block;
 }
@@ -10,6 +14,7 @@
     .section {
         padding: 28px;
     }
+
     .columns .aex-resource:first-child {
         margin-bottom: 40px;
     }
